# rust-raytracer-in-a-weekend

./: Cargo.toml  LICENSE  README.md
src/: color.rs  main.rs
src/math/: aabb.rs  mod.rs  ray.rs  vec3.rs
src/objects/: intersectable.rs  mod.rs  moving_sphere.rs  sphere.rs
src/renderer/: material.rs  mod.rs
src/scene/: camera.rs  mod.rs
