[package]
name = "ray-tracer-in-one-weekend"
version = "0.1.0"
authors = ["Axel Wettervik <axel.wettervik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.18.0"
image = "0.23.8"
rand = "0.7.3"
crossbeam = "0.7.3"
crossbeam-queue = "0.2.3"
bvh = "0.3.2"
